# pesci

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE.txt  README.md  env.yaml  fixes_and_todo.txt  pesci.yaml  pyproject.toml  scComp.yaml  setup.py  tmp.yaml
data/: .gitattributes  Cg_matrix_EM.tsv  Cragig_cell_id.tsv  Cragig_matrix.h5ad  Pc_matrix_EM.tsv  Procro_cell_id.tsv  orthologous_pairs_Procro-Cragig.txt
data/placozoa/: Hhon.sc_annot.tsv  HoiH23.sc_annot.tsv  Tadh.sc_annot.tsv  TrH2.sc_annot.tsv  orthologous_pairs_ok.txt
data/placozoa_peptidergic/: Hhon-Hhon_correlation_scores_matrix.tsv  HoiH23-Hhon_correlation_scores_matrix.tsv  HoiH23-HoiH23_correlation_scores_matrix.tsv  Tadh-Hhon_correlation_scores_matrix.tsv  Tadh-HoiH23_correlation_scores_matrix.tsv  Tadh-Tadh_correlation_scores_matrix.tsv  Tadh-TrH2_correlation_scores_matrix.tsv  TrH2-Hhon_correlation_scores_matrix.tsv  TrH2-HoiH23_correlation_scores_matrix.tsv  TrH2-TrH2_correlation_scores_matrix.tsv
data/tests/: result_correlation_scores_matrix.csv
docs/: conf.py  getting_started.rst  index.rst  output_advanced.rst  pesci.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  (+10 more)
out_scCompare/: Cragig-Procro_correlation_scores_matrix.csv  Cragig-Procro_expression_conservation_scores.csv  Cragig-Procro_gene_coexpression_table.csv
out_scCompare/files/: Cragig-Procro_orthologs_many_correlation_scores.txt  Cragig-Procro_skipped_ogs.txt  Procro_Cg_matrix_EM_expr_clusters_norm.tsv
pesci/: __init__.py  __main__.py  compare.py  iterative_comparison_coexpression.py  normalize.py  pbar.py  upgma.py  version.py
recipes/: meta.yaml
scCompare/: __main__.py  compare.py  iterative_comparison_coexpression.py  normalize.py  select_paralogs.py  tests.py
tests/: test_all.py  tmp.py
wiki/: How-to-Run.md  How-to-Run.rst  Input-Files.md  Other-tips.rst  Output-Files.md  Quick-Start.md  Quickstart.md  Tips-and-examples.md  _Sidebar.md
(+25 files in other folders)
