[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pesci"
dynamic = ["version"]
requires-python = ">=3.7, <3.13"

license = { file = "LICENSE" }

description = 'Pretty Easy Single-cell Comparisons using ICC'
authors = [{ name = "Elise Parey", email = "e.parey@ucl.ac.uk" }]
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

dependencies = ['coloredlogs', 'datatable', 'matplotlib', 'networkx', 'numpy>=2.0',
                'pandas>=2.2.2', 'scikit-learn>=1.5.2', 'scanpy>=1.10.1', 'scipy',
                'seaborn', 'tqdm', 'scikit-image']

[project.scripts]
pesci = "pesci.__main__:main"

[project.urls]
Source = "https://github.com/eparey/pesci"
Documentation = "https://pesci.readthedocs.io"

[tool.setuptools.dynamic]
version = { attr = "pesci.version.__version__" }

[tool.setuptools.packages.find]
include = ["pesci*"]

[tool.pytest.ini_options]
markers = [
    "long: marks tests as long (deselect with '-m \"not long\"')",
    "serial",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]